--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -226,44 +226,18 @@ img {
 <!--<img src="bg.jpg" style="width:100%;height:100%;">-->
 </div><br>
 
-<div class="container-fluid" style="width:100% !important;">
-<!--<div class="row"><div class="col-sm-12"><h2>Upcoming Events</h2></div></div>
-<br>-->
-<!--<div class="row">
-	<div class="col-sm-4"><div class="card" style="height:35%;" >
-	  <img src="/images/theatre2.jpg" style="width:100%;height:75%;">
-	  <h5>(R)evolution Of Steve Jobs</h5>
-	</div></div>
-	<div class="col-sm-4"><div class="card" style="height:35%;">
-	  <img src="/images/concert.jpg" style="width:100%;height:75%;">
-	   <h5>Ed Sheeran Live</h5>
-	   <h5>Bloomington</h5>
-	</div></div>
-	<div class="col-sm-4"><div class="card" style="height:35%;">
-	  <img src="/images/football.jpg" style="width:100%;height:75%">
-	  <h5>IU Hoosiers vs Michigan State Spartans</h5>
-	</div></div>
-</div>-->
-<br>
-<div class="row"><div class="col-sm-12" style="text-align:center;background-color:;"><h3>All Events</h3></div></div>
-<!--<div class="row" style="background-color:"><div class="col-sm-4" style="text-align:right;"><h5>Filter By Category:</h5></div>
-<div class="col-sm-8">
-<select class="form-control" style="width:50%" name= "cat" id="event_category" onchange="change()">
-      <option>All</option>
-      <option>Business</option>
-      <option>sports</option>
-      <option>Education</option>
-    </select>
+
+
+<div id="container-fluid" style="text-align:center;"><div class="row"><div class="col-sm-12"><h3>Events This Month</h3></div></div></div>
+<div id="display2" class="container" style="height:50%;background-color:;width:100%;overflow-y:scroll;">
 </div>
-</div>-->
-</div>
-<br>
-<div id="display" class="container-fluid" style="height:75%;width:100%;background-color:;overflow-y:scroll;">
-</div>
+
+
+
 
 <br><br>
 <div class="container-fluid" style="width:100%;font-family: 'Open Sans', sans-serif;background-color:#1E3F4D">
-<div class="row " style="background-color:;color:black;text-align:center;"><div class="col-sm-12"><h1 class="" style="">Explore Categories</h1></div></div> 
+<div class="row " style="background-color:;color:black;text-align:center;"><div class="col-sm-12"><h1 class="" style="color:white;">Explore Categories</h1></div></div> 
 <div class="row">
 <div class="card hcard" style="border-radius:0px;background-color:#1E3F4D;height:80%;width:100%;">
   <div class="card--content tabs" style=" background-color:#304860; !important;color:white" id="career" onclick="testfun(this.id);">
@@ -309,9 +283,15 @@ img {
 </div>
 </div>
 </div>
-<div id="container-fluid" style="text-align:center;"><div class="row"><div class="col-sm-12"><h3>Events This Month</h3></div></div></div>
-<div id="display2" class="container" style="height:50%;background-color:;width:100%;overflow-y:scroll;">
+
+<div class="container-fluid" style="width:100% !important;">
+<br>
+<div class="row"><div class="col-sm-12" style="text-align:center;background-color:;"><h3>All Events</h3></div></div>
 </div>
+<br>
+<div id="display" class="container-fluid" style="height:75%;width:100%;background-color:;overflow-y:scroll;">
+</div>
+
 
 <div class="container-fluid" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color: !important;color:">
 <br><div class="row" style="background-color:;">
