--- a/src/main/resources/templates/org_profile.html
+++ b/src/main/resources/templates/org_profile.html
@@ -150,14 +150,14 @@ body, html, .container-fluid {
 							<div class="col-sm-6">
 								<div class="panel panel-default" id="users_count">
 									<h5 style="">
-										&nbsp Total Users:<span id="total_users"> </span>
+										&nbsp Total Users: <span id="total_users"> </span>
 									</h5>
 								</div>
 							</div>
 							<div class="col-sm-6">
 									<div class="panel panel-default" id="totalevents" >
 									<h5 style="">
-										&nbsp Total Events:<span id="totaleventcount"> </span>
+										&nbsp Total Events: <span id="totaleventcount">19 </span>
 									</h5>
 								</div>
 							</div>
@@ -173,12 +173,12 @@ body, html, .container-fluid {
 						<div class="row">
 							<div class="col-sm-6">
 								<h4>
-									Net Revenue:<span id="total_revenue"></span>
+									Net Revenue: <span id="total_revenue">4500$</span>
 								</h4>
 							</div>
 							<div class="col-sm-6">
 								<h4>
-									Average Revenue Per Event:<span id="avg_revenue"></span>
+									Average Revenue Per Event: <span id="avg_revenue">236.84$</span>
 								</h4>
 							</div>
 						</div>
