--- a/src/main/resources/templates/PaymentPortal.html
+++ b/src/main/resources/templates/PaymentPortal.html
@@ -63,7 +63,8 @@
  		</nav>
  		</div>-->
  		<div id="body-container">
- 		<!-- <div id="here"></div> -->
+ 		<div id="here"></div>
+ 		<div id="discount"></div>
  		<div><h2>Choose your preferred method of payment:</h2></div>
 		<div id="paypal-button-container"></div></div></div>
 
